--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div class="brand-text">
         <div class="kicker">ACCOUNTABILITY TRACKER</div>
         <h1>Mayor Promise Tracker</h1>
-        <p>Tracking commitments, measuring progress, and posting receipts.</p>
+        <p>I voted for Katie Wilson. I am dissapointed. She said "hold me accountable" so we are tracking commitments, measuring progress, and posting receipts.</p>
       </div>
     </div>
   </header>
